modificaciones de textos, titulos destacados, configuración d-none a quienesSomos para pantallas pequeñas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Barra de Navegacion -->
         <nav class="navbar navbar-expand-lg navbar-transparente">
             <div class="container-fluid">
-                <a class="navbar-brand navbar-logo" href="#"><img src="./assets/img/viajes.svg" alt="imagen logo viajeschile">Viajes Chile</a>
+                <a class="navbar-brand navbar-logo" href="#"><img src="./assets/img/viajes.svg" alt="imagen logo viajeschile">  Viajes Chile</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarRicomida" aria-controls="navbarRicomida" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -76,9 +76,11 @@
     </header>
 
     <!-- Quienes Somos -->
-    <section id="section-quienessomos" class="container d-flex flex-column justify-content-center quienesSomos">
+    <section id="section-quienessomos" class="container d-none d-md-block d-flex flex-column justify-content-center quienesSomos">
         <div class="row justify-content-center mt-5">
-            <div><h2 class="text-center">¿QUIENES SOMOS?</h2></div>
+            <div>
+                <h2 class="text-center">¿QUIENES SOMOS?</h2>
+            </div>
             <hr>
             <!-- 3 Columnas -->
             <div class="col-4 mb-2 d-flex">
@@ -104,7 +106,8 @@
                         <p class="card-text quienesSomos-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dicta doloribus suscipit veniam iste error velit consectetur, dolores magni magnam voluptatum recusandae reiciendis modi, repudiandae quasi quod praesentium voluptas. Nihil delectus natus molestiae voluptatum omnis ipsam facere veritatis dolorem ducimus nulla, amet sed similique reprehenderit inventore quasi exercitationem incidunt esse veniam? Accusantium similique hic molestiae harum iste consectetur architecto nisi ex consequatur dignissimos in mollitia commodi, ad sapiente voluptatum alias ab aspernatur voluptatibus laboriosam non quasi unde tempora. Officiis officia possimus quasi ipsa iusto quam porro asperiores sunt ullam veritatis iste deserunt quod ipsum repellat quaerat eos ratione optio, corrupti expedita deleniti, quo voluptate? Magni laborum magnam sed ducimus expedita quae corporis obcaecati provident incidunt. Sapiente non corporis omnis blanditiis!</p>
                     </div>
                 </div>
-            </div>    
+            </div>
+        </div>   
     </section>
 
     <!-- Seccion destacados -->
@@ -119,7 +122,7 @@
                 <div class="card w-90">
                     <img src="./assets/img/card1.jpg" class="card-img-top" alt="imagen Destacados-1">
                     <div class="card-body">
-                        <p id="pToogle1" class="card-text card-titulo">PATAGONIA</p>
+                        <p id="pToogle1" class="card-text card-titulo">FULL PATAGONIA</p>
                         <p id="pContent1" class="card-text card-descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illo impedit minus! Asperiores architecto beatae repellat dolorum consequuntur ad doloremque. </p>
                     </div>
                 </div>
@@ -129,7 +132,7 @@
                 <div class="card w-90">
                     <img src="./assets/img/card2.jpg" class="card-img-top" alt="imagen Destacados-2">
                     <div class="card-body">
-                        <p id="pToogle2" class="card-text card-titulo">ATACAMA LAGUNAS</p>
+                        <p id="pToogle2" class="card-text card-titulo">LAGUNAS ALTIPLANICAS</p>
                         <p id="pContent2" class="card-text card-descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illo impedit minus! Asperiores architecto beatae repellat dolorum consequuntur ad doloremque.</p>
                     </div>
                 </div>
@@ -139,7 +142,7 @@
                 <div class="card w-90">
                     <img src="./assets/img/card3.jpg" class="card-img-top" alt="imagen Destacados-3">
                     <div class="card-body">
-                        <p id="pToogle3" class="card-text card-titulo">ATACAMA SALARES</p>
+                        <p id="pToogle3" class="card-text card-titulo">SALARES FULL DAY</p>
                         <p id="pContent3" class="card-text card-descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illo impedit minus! Asperiores architecto beatae repellat dolorum consequuntur ad doloremque.</p>
                     </div>
                 </div>
